--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Nuovo_PeerReview(credoParta)</name>
+	<name>BBBB__Corretto__PeerReview(credoParta)</name>
 	<comment></comment>
 	<projects>
 	</projects>
